[tool.poetry]
name = "whackdata-notebook-precisionatk"
version = "0.1.0"
description = ""
authors = ["Ryan Brideau <ryan@rdmb.ca>"]

[tool.poetry.dependencies]
python = "~3.9"
jupyterlab = "~3.2"
pandas = "~1.3"
scikit-learn = "~1.0"
Faker = "~10.0"
black = {version="^21.12b0", extras=["jupyter"]}
manim = "^0.13.1"

[tool.poetry.extras]
jupyter = ["black"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
